--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    background-color: #EDF3F6;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
+    
+}
+
+.bookBox {
+    padding: 20px;
+    margin: 20px;
+    border-radius: 1rem;
+    text-align: center;
+    background-color: white;
+    min-width: 500px;
+    
+
+}
+
+.bookBox img {
+    height: 450px;
+
+}
+
+.bookBox h2, h3 {
+    font-family: Arial, Helvetica, sans-serif;
 }
